--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -612,7 +612,7 @@
     <string name="submit_visitSummary_Button">Submit</string>
     <string name="medical_registration_number_license_id">Medical registration number/license ID</string>
     <string name="name_of_health_organization_hospital_where_you_primarily_work">Health org./hospital where you work</string>
-    <string name="username_10digits">Username should be 10 digits</string>
+    <string name="username_10digits">Username should be 8 characters</string>
     <string name="please_select_state">Please select state</string>
     <string name="save">Save</string>
     <string name="personal_information">Personal Information</string>
