--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -684,6 +684,11 @@
     <string name="personal_pr">Personal protection guidelines</string>
     <string name="if_you_star">If you start showing symptoms of Covid-19 please reach out to your supervisor/doctor. You can also send us a WhatsApp message at the number below for any concerns.</string>
     <string name="some_id">+91 9825989750</string>
+    <string name="ppe_faq">What are the best ways to reuse PPE?</string>
+    <string name="ppe_req_header">Running low on PPE? Request for PPE Kits</string>
+    <string name="ppe_req_sub_header">This service is currently available in Mumbai and Delhi only. We aim to serve as many as possible and hope to expand this service to other areas soon.</string>
+    <string name="ppe_req">Request for PPE</string>
+    <string name="ppe_req_hint">What PPE do you require with quantity*</string>
 
     // SignUP Screen(New Changes)
     <string name="txt_personal_caste_header">I am a...*</string>
