--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -707,5 +707,16 @@
 
     <!--Login Screen (New Changes)-->
     <string name="txt_sign_up_option">Don\'t have an account?</string>
+    <string name="_2">2</string>
+    <string name="you_don_t_have_any_visit">You don\'t have any visit.</string>
+    <string name="a">A</string>
+    <string name="english">English</string>
+    <string name="a_hindi">अ</string>
+    <string name="hindi_text">हिंदी</string>
+    <string name="a_marathi">मी</string>
+    <string name="marathi_text">मराठी</string>
+    <string name="a_other">मी</string>
+    <string name="other_text">ಕನ್ನಡ</string>
+    <string name="_91">+91</string>
 
 </resources>
