--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -19,4 +19,15 @@
     <string name="please_select_state">Please select state</string>
     <string name="stay_aware_stay_safe">Stay Aware | Stay Safe</string>
     <string name="assessment_visit_title">Assessment</string>
+    <string name="_2">2</string>
+    <string name="you_don_t_have_any_visit">You don\'t have any visit.</string>
+    <string name="a">A</string>
+    <string name="english">English</string>
+    <string name="a_hindi">अ</string>
+    <string name="hindi_text">हिंदी</string>
+    <string name="a_marathi">मी</string>
+    <string name="marathi_text">मराठी</string>
+    <string name="a_other">मी</string>
+    <string name="other_text">ಕನ್ನಡ</string>
+    <string name="_91">+91</string>
 </resources>
